# ECEBot

./: .gitignore  LICENSE  README.md  config.pyi  courses.toml  pyproject.toml
ECEBot/: __init__.py  __main__.py  client.py  logs.py  status.py  utils.py  watcher.py
ECEBot/cmd/: message_sending.py  misc.py  self_role.py  setup_teardown.py
ECEBot/controller/: course_creation.py  role_assignment.py
tomllib/: README.txt
